[package]
edition = "2021"
name = "pc-ints"
version = "0.2.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "PC retro interrupts (BIOS, DOS, VGA, DPMI, etc.)."
readme = "README.md"
documentation = "https://docs.rs/pc-ints/"
keywords = ["pc", "dos", "ibm", "interrupt", "dpmi"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/pc-ints"

[badges]
maintenance = { status = "experimental" }
