[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
pc-ints = { path = ".." }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.126", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
